2015-06-25  Nick Clifton  <nickc@redhat.com>

	* config/bfin/bfin.c (bfin_expand_prologue): Set
	current_function_static_stack_size if flag_stack_usage_info is
        set.
	* config/ft32/ft32.c (ft32_expand_prologue): Likewise.
	* config/h8300/h8300.c (h8300_expand_prologue): Likewise.
	* config/iq2000/iq2000.c (iq2000_expand_prologue): Likewise.
	* config/m32c/m32c.c (m32c_emit_prologue): Likewise.

2015-06-25  Tom de Vries  <tom@codesourcery.com>

	* tree-ssa-loop-manip.c (canonicalize_loop_ivs): Don't claim in header
	comment that the generated IV is unsigned.

2015-06-25  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	PR target/29693
	* config/arm/arm.c (arm_dbx_register_number): Return
	DWARF_FRAME_REGISTERS by default.

2015-06-25  Tom de Vries  <tom@codesourcery.com>

	* dominance.c (calculate_dominance_info): Fix verify_dominators call
	argument.  Call verify_dominator when reusing dominator info.

2015-06-24  Kaz Kojima  <kkojima@gcc.gnu.org>

	PR target/66563
	* config/sh/sh.md (GOTaddr2picreg): Add a new operand for
	an additional element of the unspec vector.  Modify indices
	of operands.
	(builtin_setjmp_receiver): Pass const0_rtx to gen_GOTaddr2picreg.
	* config/sh/sh.c (prepare_move_operands): Pass incremented
	const_int to gen_GOTaddr2picreg.
	(sh_expand_prologue): Pass const0_rtx to gen_GOTaddr2picreg.

2015-06-24  Alan Lawrence  <alan.lawrence@arm.com>

	* config/aarch64/aarch64.md (<optab><fcvt_target><GPF:mode>2):
	Condition on TARGET_FLOAT.

2015-06-24  Alan Lawrence  <alan.lawrence@arm.com>

	* doc/invoke.texi: Clarify AArch64 feature modifiers (no)fp, (no)simd
	and (no)crypto.

2015-06-24  Alan Lawrence  <alan.lawrence@arm.com>

	* config/aarch64/aarch64-protos.h (aarch64_err_no_fpadvsimd): New.

	* config/aarch64/aarch64.md (mov<mode>/GPF, movtf): Use
	aarch64_err_no_fpadvsimd.

	* config/aarch64/aarch64.c (aarch64_err_no_fpadvsimd): New.
	(aarch64_layout_arg, aarch64_init_cumulative_args): Use