@@ -1,3 +1,7 @@
+2015-06-25  Richard Biener  <rguenther@suse.de>
+
+	* gfortran.dg/vect/vect-9.f90: New testcase.
+
 2015-06-25  Nick Clifton  <nickc@redhat.com>
 
 	* gcc.dg/stack-usage-1.c: Add SIZE values for V850, MN10300,
